[package]
name = "seaport-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
# tokio = { version = "1", features = ["full"] }
# eyre = "0.6"
spez = "0.1.1"
once_cell = "1.8.0"
serde = "1.0.126"
