[package]
name = "seaport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
eyre = "0.6"
#serde = "1.0.126"
